# NeRF-UMC203

./: .gitignore  README.md  dataset_utils.py  gaussian_splatting.sh  main.py  pyproject.toml  requirements.txt
Notes/: NeRF_better.md  Our_Understandings.md  Paper_Notes.md
configs/: config_hmb.txt  config_jnt_statue.txt  config_wifiroom.txt
llff/cuda_renderer/: cuda_renderer
llff/llff/poses/: colmap_wrapper.py  pose_utils.py
metric_analysis/: psnr_gt_nerfvids.py  psnr_loss_vs_iter_graph.py
multinerf/: train.py
multinerf/configs/: debug.gin
multinerf/internal/: configs.py  utils.py
nerf/: config_fern.txt  config_fern_example.txt  config_lego_example.txt  config_wifiroom.txt  load_blender.py  load_llff.py  run_nerf.py  run_nerf_helpers.py
